--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@
                                 <div class="tl-contact-bottom-info">
                                     <div class="tl-contact-bottom-info-phone">
                                         <p class="tl-phone"><i class="fa fa-tablet"></i></p>
-                                        <p class="tl-phone-no">+1 (954) 305-9296 </p>
+                                        <p class="tl-phone-no">+1 (305) 330.7671 </p>
+					<p class="tl-phone-no">+1 (305) 244.3569 </p>
                                     </div>
                                     <div class="tl-about-bottom-contact-info-address">
                                         <p class="tl-contact"><i class="fa fa-envelope-o"></i></p>
